networkpolicy2.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
 name: networkpolicy2
 namespace: dev
spec:
  podSelector: {}
  #   matchLabels:
  #      master: mpod
  policyTypes:
     - Ingress
     - Egress
  ingress:
   - from:
      - podSelector: 
           matchLabels:
             master: mpod
        namespaceSelector: {}
  egress:
   - to:
      - podSelector:
           matchLabels:
             master: mpod
        namespaceSelector: {}
